--- a/views/index.pug
+++ b/views/index.pug
@@ -1,63 +1,31 @@
-doctype html
-head
-  meta(charset='utf-8')
-  meta(name='viewport' content='width=device-width, initial-scale=1.0, shrink-to-fit=no')
-  title Homework Share
-  link(rel='stylesheet' href='/assets/bootstrap/css/bootstrap.min.css?h=f22698aa189968eddf8d7f9eb08372a9')
-  link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i')
-  link(rel='stylesheet' href='/assets/fonts/fontawesome-all.min.css?h=18313f04cea0e078412a028c5361bd4e')
-#wrapper
-  #content-wrapper.d-flex.flex-column
-    #content
-      nav.navbar.navbar-light.navbar-expand.bg-white.shadow.mb-4.topbar.static-top
-        .container-fluid
-          button#sidebarToggleTop.btn.btn-link.d-md-none.rounded-circle.mr-3(type='button')
-            i.fas.fa-bars
-          h1.text-left.text-primary Homework-Share
-          form.form-inline.d-none.d-sm-inline-block.mr-auto.ml-md-3.my-2.my-md-0.mw-100.navbar-search
-            .input-group
-          if user != undefined
-            ul.nav.navbar-nav.flex-nowrap.ml-auto
-              li.nav-item.dropdown.no-arrow(role='presentation')
-                .nav-item.dropdown.no-arrow
-                  a.dropdown-toggle.nav-link(data-toggle='dropdown' aria-expanded='false' href='#')
-                    span.d-none.d-lg-inline.mr-2.text-gray-600.small #{user.username}
-                  .dropdown-menu.shadow.dropdown-menu-right.animated--grow-in(role='menu')
-                    a.dropdown-item(role='presentation' href='#')
-                      i.fas.fa-user.fa-sm.fa-fw.mr-2.text-gray-400
-                      | &nbsp;Profile
-                    .dropdown-divider
-                    a.dropdown-item(role='presentation' href='#')
-                      i.fas.fa-sign-out-alt.fa-sm.fa-fw.mr-2.text-gray-400
-                      | &nbsp;Logout
-          else
-            a(href="/login.html")
-              span.d-none.d-lg-inline.mr-2.text-gray-600.small Log in
-            span.d-none.d-lg-inline.mr-2.text-gray-600.small /
-            a(href="/register.html")
-              span.d-none.d-lg-inline.mr-2.text-gray-600.small Register  
-      .container-fluid
-        .d-sm-flex.justify-content-between.align-items-center.mb-4
-          h3.text-dark.mb-0 Main Page
-        .row
-          each note in notes
-            .col-md-6.col-xl-3.mb-4
-             .card.shadow.border-left-primary.py-2
-               .card-body
-                  .row.align-items-center.no-gutters
-                    .col.mr-2
-                      .text-uppercase.text-primary.font-weight-bold.text-xs.mb-1
-                        span=note.creator.username
-                      .text-dark.font-weight-bold.h5.mb-0
-                        span=note.name
-                  img(src='/assets/img/dogs/image3.jpeg?h=cbc3a40dae521ddee89bf6b026abde71' style='width: 214px;height: 253px;padding: 11px;')
-    footer.bg-white.sticky-footer
-      .container.my-auto
-        .text-center.my-auto.copyright
-          span Copyright &copy; You&apos;ll never know 2020
-  a.border.rounded.d-inline.scroll-to-top(href='#page-top')
-    i.fas.fa-angle-up
-script(src='/assets/js/jquery.min.js?h=83e266cb1712b47c265f77a8f9e18451')
-script(src='/assets/bootstrap/js/bootstrap.min.js?h=e46528792882c54882f660b60936a0fc')
-script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js')
-script(src='/assets/js/theme.js?h=6d33b44a6dcb451ae1ea7efc7b5c5e30')
+extends layout.pug
+
+block content      
+  style.
+    .card.shadow.border-left-primary.py-2:hover {
+    background-color: lightgrey;
+    -webkit-transition: background-color 250ms linear;
+    -ms-transition: background-color 250ms linear;
+    transition: background-color 250ms linear;
+    }
+  .container-fluid
+    .d-sm-flex.justify-content-between.align-items-center.mb-4
+      h3.text-dark.mb-0 Main Page
+    .row(style="padding-left: 5%; padding-top: 25px")
+      if !notes.length 
+        h1 
+          | There are no notes. 
+          a(href="/create/note" style="text-decoration: none")
+            | Create one by going here
+      each note in notes
+        .col-md-6.col-xl-3.mb-4
+          .card.shadow.border-left-primary.py-2
+            .card-body
+              a(href="/notes/" + note.id style="text-decoration: none")
+                .row.align-items-center.no-gutters
+                  .col.mr-2
+                    .text-uppercase.text-primary.font-weight-bold.text-xs.mb-1
+                      span votes: 0
+                    .text-dark.font-weight-bold.h5.mb-0
+                      span=note.name
+                img(src="data:" + note.image.mime + ";base64," + note.image.buf style='width: 100%;height: 250px;padding: 5px;')
