--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,7 +14,7 @@ head
                     button#sidebarToggleTop.btn.btn-link.d-md-none.rounded-circle.mr-3(type='button')
                         i.fas.fa-bars
                     a(href="/" style="text-decoration: none;")
-                        h2.text-left.text-primary Homework-Share
+                        h2.text-left.text-primary Note-Share
                     form.form-inline.d-none.d-sm-inline-block.mr-auto.ml-md-3.my-2.my-md-0.mw-100.navbar-search
                         .input-group
                     if user != undefined
