--- a/views/note.pug
+++ b/views/note.pug
@@ -23,6 +23,7 @@ block content
         else
           p.card-text Uploaded By: #{note.creator.username}
       input(value="https://hw-share.yaznic.me/notes/#{note.id}" id="share-link" onclick="copy()" disabled)
+      h2 You can copy paste the link above to share this note
       script.
         var copyText = document.getElementById("share-link");
         copyText.select();
